fix(ui): Side menu overlaps card tiles as intended

--- a/client/src/pages/HomePage/HomePage.module.css
+++ b/client/src/pages/HomePage/HomePage.module.css
@@ -1,6 +1,7 @@
-.parentCtn { 
-    margin-left: 200px;
-    display: flex; 
+.contentCtn  {
+    margin-left: 60px;
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 45px;
 }
